# Notification

./: .gitignore  CMakeLists.txt  Notification.desktop  README.md
example/: test.py  test.sh
packAppImage/packFile/: Notification.desktop
src/: main.cpp
src/common/: tools.cpp  tools.h
src/component/: oneRowTableItem.cpp  oneRowTableItem.h
src/components/: oneRowTableItem.cpp  oneRowTableItem.h  scriptRunner.cpp  scriptRunner.h
src/mainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui
src/resources/: resources.qrc  resources_rc.py
src/widgets/: infoTextWidget.cpp  infoTextWidget.h  infoTextWidget.ui
